src/objects/License__c.object
<CustomObject>
    <description>This object is used the Service Operations License team</description>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <description>Alternate phone number</description>
        <label>Alt. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Address__c</fullName>
        <formula>Contact__r.MailingStreet +Br()+ 
Contact__r.MailingCity +BR()+ 
Contact__r.MailingState +&apos; &apos;+ Contact__r.MailingPostalCode</formula>
        <label>Contact Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact name associated with the renewal</description>
        <inlineHelpText>Contact for the renewal</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>Cost Center Service</description>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cost_Center</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>When the renewal should happen</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Expiration date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Name__c</fullName>
        <inlineHelpText>Description</inlineHelpText>
        <label>License Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Nbr__c</fullName>
        <inlineHelpText>Unique license/tax nbr</inlineHelpText>
        <label>License Nbr</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <inlineHelpText>What type of a license/tax is this?</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business License</fullName>
                </value>
                <value>
                    <fullName>Business Tax</fullName>
                </value>
                <value>
                    <fullName>Contractor License</fullName>
                </value>
                <value>
                    <fullName>Gaming License</fullName>
                </value>
                <value>
                    <fullName>Personal Property Tax</fullName>
                </value>
                <value>
                    <fullName>Privilege Tax</fullName>
                </value>
                <value>
                    <fullName>Property Tax</fullName>
                </value>
                <value>
                    <fullName>Tax License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <inlineHelpText>Amount of payment</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Name_or_Nbr__c</fullName>
        <inlineHelpText>Check number or auto payment</inlineHelpText>
        <label>Payment Name or Nbr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEST_RICH_TEXT__c</fullName>
        <label>TEST RICH TEXT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>License_Nbr__c</columns>
        <columns>License_Name__c</columns>
        <columns>License_Type__c</columns>
        <columns>End_Date__c</columns>
        <columns>Cost_Center__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Name_or_Nbr__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LIC-{000000}</displayFormat>
        <label>SFDC License Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Due_Date_is_before_End_Date</fullName>
        <active>true</active>
        <description>The license Due Date must be before the End Date of the license</description>
        <errorConditionFormula>OR (Due_Date__c &gt; End_Date__c, Due_Date__c = End_Date__c)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date must be before the End Date</errorMessage>
    </validationRules>
</CustomObject>